# linesight

./: README.md
linesight/: .gitattributes  .gitignore  LICENSE  base.py  pyproject.toml  requirements-dev.txt  setup.py
linesight/exceptions/: convergence_warning.py  data_warning.py  shape_error.py
linesight/linesight/: __init__.py
linesight/linesight/exceptions/: __init__.py  gradient_error.py  not_fitted_error.py
linesight/linesight/metrics/: accuracy.py  mse.py  r2.py
linesight/linesight/regression/elasticnet/: __init__.py  core.py
linesight/linesight/regression/lasso/: __init__.py
linesight/linesight/regression/logistic/: __init__.py
linesight/linesight/regression/multiple/: __init__.py
linesight/linesight/regression/polynomial/: core.py
linesight/linesight/utils/: __init__.py  array_utils.py  colors.py  environment.py  history.py  validators.py  viz_context.py
linesight/metrics/: __init__.py  mae.py  rmse.py
linesight/regression/: __init__.py
linesight/regression/elasticnet/engine/: compute_loss.py  score.py
linesight/regression/lasso/: core.py
linesight/regression/lasso/engine/: compute_loss.py  fit.py  (+1 more)
linesight/regression/linear/: __init__.py  core.py
linesight/regression/logistic/: core.py
linesight/regression/multiple/: core.py
linesight/regression/ridge/: __init__.py  core.py
linesight/tests/: conftest.py  test_elasticnet_engine.py  test_history.py  test_lasso_engine.py  test_linear_engine.py  test_logistic_engine.py  test_metrics.py  test_multiple_engine.py  test_polynomial_engine.py  test_ridge_engine.py  test_validators.py
(+104 files in other folders)
