[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linesight"
version = "0.1.0"
description = "Educational regression library with tutor-style explanations and visualizations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["machine-learning", "regression", "education", "visualization", "gradient-descent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pandas>=1.5",
]

[project.urls]
Homepage = "https://github.com/AnshumanTiwari2006/linesight"
"Bug Tracker" = "https://github.com/AnshumanTiwari2006/linesight/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["linesight*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::linesight.exceptions.convergence_warning.LineSightConvergenceWarning",
    "ignore::linesight.exceptions.data_warning.LineSightDataWarning",
]
